--- a/artillery/config.fuzzer.yaml
+++ b/artillery/config.fuzzer.yaml
@@ -1,10 +1,20 @@
+# 	arrivalRate: Constant rate (X users/second)
+# 	arrivalCount: Total users distributed over duration
+# https://www.artillery.io/docs/reference/test-script#load-phase-examples
 
 config:
   target: 'http://host.docker.internal:3001'
   phases:
-    - arrivalCount: 10
-      arrivalRate: 20
-      duration: 30
+    - arrivalRate: 20
+      duration: 10
+      name: "20 users/second for 10 seconds"
+    - arrivalRate: 20
+      rampTo: 1000
+      duration: 10
+      name: "20 users/second to 1000 users/second for 10 seconds"
+    - arrivalCount: 1000
+      duration: 10
+      name: "1000 users for 10 seconds"
   environments:
     localhost:
       target: 'http://localhost:3001'
@@ -17,5 +27,7 @@ config:
       Content-Type: 'application/json'
       Accept: 'application/json'
   plugins:
-    expect: {}
-    fuzzer: {}
+    expect:
+      outputFormat: silent
+    fuzzer:
+      outputFormat: silent
