--- a/artillery/config.yaml
+++ b/artillery/config.yaml
@@ -1,10 +1,14 @@
 
+# 	arrivalRate: Constant rate (X users/second)
+# 	arrivalCount: Total users distributed over duration
+# https://www.artillery.io/docs/reference/test-script#load-phase-examples
+
 config:
   target: 'http://host.docker.internal:3001'
   phases:
-    - arrivalCount: 10
-      arrivalRate: 2
+    - arrivalRate: 2
       duration: 10
+      name: "2 users/second for 10 seconds"
   environments:
     localhost:
       target: 'http://localhost:3001'
@@ -19,4 +23,5 @@ config:
     environment: 'indocker'
   processor: './processors.ts'
   plugins:
-    expect: {}
+    expect:
+      outputFormat: silent
