--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -515,14 +515,23 @@ tasks:
       ENVIRONMENT: "{{.ENVIRONMENT}}"
     cmds:
       - echo "Starting test servers..."
-      - docker compose -f docker-compose.test.from.images.yml up -d --build --wait
       - |
-        # Check if all containers are healthy
-        if docker compose -f docker-compose.test.from.images.yml ps --format table | grep -q "Up"; then
+        # Determine which compose file to use based on ENABLE_RATELIMITS
+        COMPOSE_FILE="docker-compose.test.from.images.yml"
+        if [ "${ENABLE_RATELIMITS:-false}" = "true" ]; then
+          COMPOSE_FILE="docker-compose.test.from.images.with.ratelimits.yml"
+          echo "🔒 Rate limiting enabled - using $COMPOSE_FILE"
+        else
+          echo "🚫 Rate limiting disabled - using $COMPOSE_FILE"
+        fi
+        docker compose -f "$COMPOSE_FILE" up -d --build --wait
+      - |
+        # Use the same COMPOSE_FILE variable from above for health check
+        if docker compose -f "$COMPOSE_FILE" ps --format table | grep -q "Up"; then
           echo "✅ All test containers started successfully"
         else
           echo "❌ Some containers failed to start. Showing logs:"
-          docker compose -f docker-compose.test.from.images.yml logs
+          docker compose -f "$COMPOSE_FILE" logs
           exit 1
         fi
       - echo "Setting up test database with golden data..."
@@ -556,13 +565,19 @@ tasks:
         fi
       - |
         # Check if test environment is running, start if not
-        if ! docker compose -f docker-compose.test.from.images.yml ps --format table | grep -q "Up"; then
+        # Determine which compose file to use based on ENABLE_RATELIMITS
+        COMPOSE_FILE="docker-compose.test.from.images.yml"
+        if [ "${ENABLE_RATELIMITS:-false}" = "true" ]; then
+          COMPOSE_FILE="docker-compose.test.from.images.with.ratelimits.yml"
+        fi
+
+        if ! docker compose -f "$COMPOSE_FILE" ps --format table | grep -q "Up"; then
           echo "Starting test environment..."
           task start-test-environment-from-images
-          echo "0" > {{.TASKFILE_DIR}}/.test_keep_running
+          echo "0" > .test_keep_running
         else
           echo "Test environment already running"
-          echo "1" > {{.TASKFILE_DIR}}/.test_keep_running
+          echo "1" > .test_keep_running
         fi
       - 'echo "Running Artillery test: {{.TEST_NAME}}"'
       - |
@@ -579,7 +594,7 @@ tasks:
       - |
         if [ "$(cat {{.TASKFILE_DIR}}/.test_keep_running 2>/dev/null || echo '0')" != "1" ]; then
           echo "Stopping test servers..."
-          docker compose -f docker-compose.test.from.images.yml down -v --remove-orphans
+          docker compose -f "$COMPOSE_FILE" down -v --remove-orphans
         else
           echo "Test environment was already running, leaving servers running"
         fi
@@ -595,7 +610,13 @@ tasks:
     cmds:
       - |
         # Check if test environment is running, start if not
-        if ! docker compose -f docker-compose.test.from.images.yml ps --format table | grep -q "Up"; then
+        # Determine which compose file to use based on ENABLE_RATELIMITS
+        COMPOSE_FILE="docker-compose.test.from.images.yml"
+        if [ "${ENABLE_RATELIMITS:-false}" = "true" ]; then
+          COMPOSE_FILE="docker-compose.test.from.images.with.ratelimits.yml"
+        fi
+
+        if ! docker compose -f "$COMPOSE_FILE" ps --format table | grep -q "Up"; then
           echo "Starting test environment..."
           task start-test-environment-from-images
           echo "0" > {{.TASKFILE_DIR}}/.test_keep_running
@@ -633,7 +654,7 @@ tasks:
       - |
         if [ "$(cat {{.TASKFILE_DIR}}/.test_keep_running 2>/dev/null || echo '0')" != "1" ]; then
           echo "Stopping test servers..."
-          docker compose -f docker-compose.test.from.images.yml down -v --remove-orphans
+          docker compose -f "$COMPOSE_FILE" down -v --remove-orphans
         else
           echo "Test environment was already running, leaving servers running"
         fi
@@ -648,7 +669,13 @@ tasks:
     cmds:
       - |
         # Check if test environment is running, start if not
-        if ! docker compose -f docker-compose.test.from.images.yml ps --format table | grep -q "Up"; then
+        # Determine which compose file to use based on ENABLE_RATELIMITS
+        COMPOSE_FILE="docker-compose.test.from.images.yml"
+        if [ "${ENABLE_RATELIMITS:-false}" = "true" ]; then
+          COMPOSE_FILE="docker-compose.test.from.images.with.ratelimits.yml"
+        fi
+
+        if ! docker compose -f "$COMPOSE_FILE" ps --format table | grep -q "Up"; then
           echo "Starting test environment..."
           task start-test-environment-from-images
           echo "0" > {{.TASKFILE_DIR}}/.test_keep_running
@@ -689,7 +716,7 @@ tasks:
       - |
         if [ "$(cat {{.TASKFILE_DIR}}/.test_keep_running 2>/dev/null || echo '0')" != "1" ]; then
           echo "Stopping test servers..."
-          docker compose -f docker-compose.test.from.images.yml down -v --remove-orphans
+          docker compose -f "$COMPOSE_FILE" down -v --remove-orphans
         else
           echo "Test environment was already running, leaving servers running"
         fi
