--- a/nginx.conf
+++ b/nginx.conf
@@ -47,15 +47,9 @@ http {
         # Note: Removed DENY to allow iframes for admin interface
         add_header X-Frame-Options "SAMEORIGIN" always;
 
-        # Additional security headers
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        # Include security headers
+        include /etc/nginx/snippets/security-headers.inc;
 
-        # Cross-Origin headers for Spectre protection
-        add_header Cross-Origin-Resource-Policy "same-origin" always;
-        add_header Cross-Origin-Embedder-Policy "require-corp" always;
-        add_header Cross-Origin-Opener-Policy "same-origin" always;
 
         # Define valid SPA routes
         location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily)(/.*)?$ {
@@ -81,6 +75,7 @@ http {
         # Serve frontend static assets
         location ~ ^/assets/.*\.(js|css|map)$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
             add_header Cache-Control "public, max-age=31536000, immutable";
@@ -89,6 +84,7 @@ http {
         # Serve static assets for frontend (vite icon and favicon)
         location ~ ^/(vite\.svg|favicon\.svg) {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
             add_header Cache-Control "public, max-age=31536000, immutable";
@@ -96,6 +92,7 @@ http {
 
         # Serve build-time version file (avoid caching)
         location = /meta/version.json {
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
             add_header Content-Type "application/json" always;
@@ -105,6 +102,7 @@ http {
         # Serve font files
         location ~ ^/fonts/ {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files $uri =404;
             add_header Cache-Control "public, max-age=31536000, immutable";
@@ -113,6 +111,7 @@ http {
         # Legacy favicon requests: try .ico, fallback to .svg (single place)
         location = /favicon.ico {
             include /etc/nginx/snippets/ratelimit-default.inc;
+            include /etc/nginx/snippets/security-headers.inc;
             root /usr/share/nginx/html;
             try_files /favicon.ico /favicon.svg =404;
             add_header Cache-Control "public, max-age=31536000, immutable";
@@ -121,6 +120,8 @@ http {
         # Authentication endpoints - stricter rate limiting
         location ~ ^/v1/auth/(login|signup)$ {
             include /etc/nginx/snippets/ratelimit-auth.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://backend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -131,6 +132,8 @@ http {
         # Quiz endpoints - moderate rate limiting
         location ~ ^/v1/quiz/ {
             include /etc/nginx/snippets/ratelimit-quiz.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://backend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -141,6 +144,8 @@ http {
         # Backend admin endpoints - proxy to backend service
         location ~ ^/v1/admin/backend/ {
             include /etc/nginx/snippets/ratelimit-api.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://backend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -152,6 +157,8 @@ http {
         # Worker admin endpoints - proxy to worker service
         location ~ ^/v1/admin/worker/ {
             include /etc/nginx/snippets/ratelimit-api.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://worker:8081;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -164,6 +171,8 @@ http {
         location /v1/audio/ {
             auth_request /auth/check;
             include /etc/nginx/snippets/ratelimit-tts.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://tts:5050;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -200,6 +209,8 @@ http {
         location ~ ^/v1/voices(.*)$ {
             auth_request /auth/check;
             include /etc/nginx/snippets/ratelimit-tts.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://tts:5050;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -245,6 +256,8 @@ http {
         # All other API endpoints - general rate limiting
         location /v1/ {
             include /etc/nginx/snippets/ratelimit-api.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://backend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -262,6 +275,8 @@ http {
 
         # Health check passthrough
         location /health {
+            include /etc/nginx/snippets/security-headers.inc;
+
             proxy_pass http://backend:8080;
             include /etc/nginx/snippets/ratelimit-default.inc;
         }
