--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -139,7 +139,7 @@ tasks:
       - go tool cover -func=coverage.out
       - echo ""
       - echo "HTML coverage report generated - coverage.html"
-      - go tool cover -html=coverage.out -o coverage.html
+      - covreport -i coverage.out -o coverage.html
       - echo "Coverage by package:"
       - go tool cover -func=coverage.out | grep "total:" || echo "No coverage data"
 
