--- a/config.yaml
+++ b/config.yaml
@@ -121,6 +121,7 @@ story:
   max_archived_per_user: 20
   generation_enabled: true
   max_extra_generations_per_day: 1
+  max_worker_generations_per_day: 1
 
   # Section length defaults by proficiency level (in words)
   # These levels are language-agnostic and can be mapped to any framework
