--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -170,6 +170,8 @@ services:
         - type=local,src=/tmp/.buildx-cache-frontend
       # cache_to:
       #   - type=local,dest=/tmp/.buildx-cache-frontend-new,mode=max
+      x-bake:
+        provenance: false
     ports:
       - "${FRONTEND_PORT:-3000}:80"
     depends_on:
