--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@testing-library/dom": "^10.4.1",
     "audio-feeder": "^0.5.0",
     "axios": "^1.7.2",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
