fixing e2e api tests

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -957,7 +957,7 @@ tasks:
       DOCKER_BUILDKIT_NO_PROVENANCE: 1
     cmds:
       - echo "Stopping dev servers (keeping data)..."
-      - docker compose down
+      - docker compose down -q
       - echo "✅ Dev services stopped (data preserved)"
 
   restart-dev:
