--- a/nginx.conf
+++ b/nginx.conf
@@ -44,7 +44,7 @@ http {
         include /etc/nginx/snippets/security-headers.inc;
 
         # Define valid SPA routes
-        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai)(/.*)?$ {
+        location ~ ^/(login|signup|quiz|vocabulary|reading-comprehension|progress|settings|oauth-callback|admin|daily|story|conversations|ai|bookmarks)(/.*)?$ {
             include /etc/nginx/snippets/ratelimit-default.inc;
             root /usr/share/nginx/html;
             try_files /index.html =404;
