--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,9 @@ SIGNZ_OTEL_COLLECTOR_HOST=localhost
 SIGNZ_OTEL_COLLECTOR_PORT=4317
 SIGNZ_OTEL_COLLECTOR_INSECURE=true
 SIGNZ_OTEL_COLLECTOR_TOKEN=""
+
+# Google Translate API Configuration
+# Get your API key from: https://console.cloud.google.com/apis/credentials
+# Enable the Google Translate API for your project first
+VITE_GOOGLE_TRANSLATE_API_KEY=your_google_translate_api_key_here
+
