--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,7 @@ http {
     limit_req_zone $binary_remote_addr zone=quiz_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=default_limit:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=tts_limit:10m rate=5r/s;
+    limit_req_zone $binary_remote_addr zone=translate_limit:10m rate=5r/s;
 
     server {
         listen 80;
@@ -238,6 +239,19 @@ http {
             proxy_pass_request_body off;
             proxy_set_header Content-Length "";
             proxy_set_header X-Original-URI $request_uri;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Cookie $http_cookie;
+        }
+
+        # Translation endpoints - stricter rate limiting
+        location /v1/translate {
+            include /etc/nginx/snippets/ratelimit-translate.inc;
+            include /etc/nginx/snippets/security-headers.inc;
+
+            proxy_pass http://backend:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
