--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -46,10 +46,12 @@ ARG BUILDKIT_INLINE_CACHE=1
 ARG APP_VERSION=dev
 ARG COMMIT_HASH=dev
 ARG BUILD_TIME=unknown
+ARG VITE_GOOGLE_TRANSLATE_API_KEY
 
 ENV VITE_APP_VERSION=$APP_VERSION
 ENV VITE_COMMIT_HASH=$COMMIT_HASH
 ENV VITE_BUILD_TIME=$BUILD_TIME
+ENV VITE_GOOGLE_TRANSLATE_API_KEY=$VITE_GOOGLE_TRANSLATE_API_KEY
 
 WORKDIR /app
 
