--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -134,6 +134,8 @@ services:
     depends_on:
       backend:
         condition: service_healthy
+    env_file:
+      - .env
     healthcheck:
       test: ["CMD", "sh", "-c", "curl -f http://localhost/health" ]
       interval: 10s
